@@ -1,3 +1,8 @@
+Wed Sep 19 10:23:06 2001  Carlos O'Ryan  <coryan@uci.edu>
+
+        * html/index.html:
+          Add couple of missing links to the RT-CORBA components
+
 Wed Sep 19 12:00:04 2001  Johnny Willemsen <jwillemsen@remedy.nl>
 
         * ACE-INSTALL.html:
